hw-11: completed upload avatar
